--- a/WebSiteAngular/angular.json
+++ b/WebSiteAngular/angular.json
@@ -50,9 +50,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.css"              
             ],
-            "scripts": []
+            "scripts": [
+            "node_modules/bootstrap/dist/js/bootstrap.min.js",
+            "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+            "node_modules/jquery/dist/jquery.min.js",  
+            "node_modules/popper.js/dist/umd/popper.min.js", 
+            "node_modules/popper.js/dist/popper.min.js"]
           },
           "configurations": {
             "production": {
