--- a/WebSiteAngular/angular.json
+++ b/WebSiteAngular/angular.json
@@ -50,8 +50,9 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/purple-green.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"              
+              "src/styles.css"
             ],
             "scripts": [
             "node_modules/bootstrap/dist/js/bootstrap.min.js",
@@ -118,6 +119,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
             "scripts": []
